--- a/cluster/apps/argo-apps/storageclasses-app.yaml
+++ b/cluster/apps/argo-apps/storageclasses-app.yaml
@@ -14,7 +14,7 @@ spec:
     path: cluster/base
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: default 
+    #namespace: default 
   syncPolicy:
     automated:
       prune: true
