--- a/cluster/apps/argo-apps/traefik-app.yaml
+++ b/cluster/apps/argo-apps/traefik-app.yaml
@@ -37,7 +37,7 @@ spec:
           traefik:
             port: 9000
             exposedPort: 9000
-            expose: true
+        # expose: true
         
         # Deployment configuration
         deployment:
