--- a/cluster/apps/argo-apps/metallb-config-app.yaml
+++ b/cluster/apps/argo-apps/metallb-config-app.yaml
@@ -13,7 +13,7 @@ spec:
     targetRevision: main
     path: cluster/apps/metallb/config
   destination:
-    server: 'https://kuernetes.default.svc'
+    server: 'https://kubernetes.default.svc'
     namespace: metallb-system
   syncPolicy:
     automated:
