--- a/cluster/apps/karakeep/web-deployment.yaml
+++ b/cluster/apps/karakeep/web-deployment.yaml
@@ -45,6 +45,24 @@ spec:
                 sleep 5
               done
               echo "Chrome is ready!"
+        # Nuevo initContainer para verificar y arreglar permisos
+        - name: fix-permissions
+          image: busybox:1.36
+          securityContext:
+            runAsUser: 0  # Ejecutar como root para cambiar permisos
+          command:
+            - /bin/sh
+            - -c
+            - |
+              echo "Creating data directory and fixing permissions..."
+              mkdir -p /data
+              chown -R 1000:1000 /data
+              chmod -R 755 /data
+              ls -la /data
+              echo "Permissions fixed"
+          volumeMounts:
+            - name: data
+              mountPath: /data
       containers:
         - name: karakeep-web
           image: ghcr.io/karakeep-app/karakeep:latest
@@ -84,13 +102,13 @@ spec:
             httpGet:
               path: /
               port: 3000
-            initialDelaySeconds: 60
+            initialDelaySeconds: 120  
             periodSeconds: 30
           readinessProbe:
             httpGet:
               path: /
               port: 3000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 60   
             periodSeconds: 10
       volumes:
         - name: data
