--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -57,6 +57,5 @@ spec:
           persistentVolumeClaim:
             claimName: lidarr-config
         - name: downloads 
-          hostPath:
-            path: /mnt/windows-media
-            type: Directory
+          persistentVolumeClaim:
+            claimName: media-nfs-pvcy
