--- a/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
+++ b/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
@@ -56,5 +56,5 @@ spec:
           persistentVolumeClaim:
             claimName: qbittorrent-config
         - name: downloads
-          hostPath:
-            path: /mnt/windows-media
+          persistentVolumeClaim:
+            claimName: media-nfs-pvc
