--- a/cluster/apps/media-stack/pvc-media.yaml
+++ b/cluster/apps/media-stack/pvc-media.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: bazarr-config
+  name: media-nfs-pvc
   namespace: media-stack
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: media-nfs-pvc
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Ti
+  volumeName: media-nfs-pv 
+  storageClassName: ""
