--- a/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
+++ b/cluster/apps/media-stack/sonarr/sonarr-deployment.yaml
@@ -57,5 +57,5 @@ spec:
           persistentVolumeClaim:
             claimName: sonarr-config
         - name: downloads
-          hostPath:
-            path: /mnt/windows-media
+          persistentVolumeClaim:
+            claimName: media-nfs-pvc
