--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -18,13 +18,6 @@ spec:
       labels:
         app: lidarr
     spec:
-      initContainers:
-        - name: wait-for-smb
-          image: busybox:1.36
-          command: ['sh', '-c', 'until mountpoint -q /media; do echo "waiting for SMB mount..."; sleep 5; done']
-          volumeMounts:
-            - name: downloads
-              mountPath: /media
       containers:
         - name: lidarr
           image: blampe/lidarr:latest
@@ -58,4 +51,4 @@ spec:
             claimName: lidarr-config
         - name: downloads 
           persistentVolumeClaim:
-            claimName: media-nfs-pvcy
+            claimName: media-nfs-pvc
