--- a/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
+++ b/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
@@ -19,12 +19,12 @@ spec:
         app: prowlarr
     spec:
       initContainers:
-        - name: wait-for-smb
-          image: busybox:1.36
-          command: ['sh', '-c', 'until mountpoint -q /media; do echo "waiting for SMB mount..."; sleep 5; done']
-          volumeMounts:
-            - name: downloads
-              mountPath: /media
+       - name: wait-for-nfs
+         image: busybox:1.36
+         command: ['sh', '-c', 'until mountpoint -q /media; do echo "waiting for NFS mount..."; sleep 5; done; echo "NFS mount ready"']
+         volumeMounts:
+         - name: downloads
+           mountPath: /media
       containers:
         - name: prowlarr
           image: lscr.io/linuxserver/prowlarr:latest
