Add adguard data PV

--- a/cluster/apps/networking/adguard/kustomization.yaml
+++ b/cluster/apps/networking/adguard/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - namespace.yaml
   - pvc-config.yaml
   - pvc-data.yaml
+  - adguard-config-pv.yaml  
+  - adguard-data-pv.yaml 
   - deployment.yaml
   - service.yaml
   - adguard-ingressroute.yaml
