--- a/cluster/apps/media-stack/bazarr/kustomization.yaml
+++ b/cluster/apps/media-stack/bazarr/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
- - bazarr-deployment.yaml
- - bazarr-pvc.yaml
- - bazarr-networking.yaml 
+  - bazarr-config-pv.yaml
+  - bazarr-pvc.yaml
+  - bazarr-deployment.yaml
+  - bazarr-networking.yaml
