--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -1,4 +1,3 @@
-# cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,7 +19,7 @@ spec:
     spec:
       containers:
         - name: lidarr
-          image: blampe/lidarr:latest
+          image: lscr.io/linuxserver/lidarr:develop
           env:
             - name: PUID
               value: "1000"
@@ -31,24 +30,15 @@ spec:
           ports:
             - name: http
               containerPort: 8686
-          readinessProbe:
-            httpGet:
-              path: /login
-              port: http
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
           volumeMounts:
             - name: config
               mountPath: /config
-              subPath: lidarr
-            - name: downloads 
+            - name: downloads
               mountPath: /media
       volumes:
         - name: config
           persistentVolumeClaim:
             claimName: lidarr-config
-        - name: downloads 
+        - name: downloads
           persistentVolumeClaim:
             claimName: media-nfs-pvc
