--- a/cluster/apps/media-stack/prowlarr/kustomization.yaml
+++ b/cluster/apps/media-stack/prowlarr/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - prowlarr-config-pv.yaml
   - prowlarr-pvc.yaml
   - prowlarr-deployment.yaml
   - prowlarr-networking.yaml
