--- a/cluster/apps/media-stack/qbittorrent/pvc-qbittorrent.yaml
+++ b/cluster/apps/media-stack/qbittorrent/pvc-qbittorrent.yaml
@@ -1,4 +1,3 @@
-# cluster/apps/media-stack/pvc-qbittorrent.yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -11,3 +10,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  volumeName: qbittorrent-config-pv
