--- a/cluster/apps/media-stack/radarr/kustomization.yaml
+++ b/cluster/apps/media-stack/radarr/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - radarr-config-pv.yaml
   - radarr-pvc.yaml
   - radarr-deployment.yaml
   - radarr-networking.yaml
