--- a/cluster/apps/media-stack/overseerr/pvc.yaml
+++ b/cluster/apps/media-stack/overseerr/pvc.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-dynamic
+  storageClassName: ""  
   resources:
     requests:
       storage: 1Gi
+  volumeName: overseerr-config-pv  
