--- a/cluster/apps/media-stack/kustomization.yaml
+++ b/cluster/apps/media-stack/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - ./qbittorrent
+#  - ./qbittorrent
   - ./sonarr
   - ./radarr
   - ./lidarr
@@ -15,3 +15,4 @@ resources:
   - ./flaresolverr
   - ./navidrome
   - pvc-media.yaml
+  - ./transmission
