--- a/cluster/apps/media-stack/transmission/transmission-config-pv.yaml
+++ b/cluster/apps/media-stack/transmission/transmission-config-pv.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: qbittorrent-config-pv
+  name: transmission-config-pv
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs-dynamic
+  storageClassName: nfs-dynamic  
   nfs:
     server: 192.168.0.21
-    path: "/mnt/tokyo-3/k8s-data/qbittorrent" 
+    path: "/mnt/tokyo-3/k8s-data/transmission"
