--- a/cluster/apps/media-stack/transmission/transmission-networking.yaml
+++ b/cluster/apps/media-stack/transmission/transmission-networking.yaml
@@ -1,21 +1,28 @@
-# cluster/apps/media-stack/qbittorrent-networking.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: qbittorrent
+  name: transmission
   namespace: media-stack
 spec:
   selector:
-    app: qbittorrent
+    app: transmission
   ports:
     - name: webui
-      port: 8080
-      targetPort: 8080
+      port: 9091
+      targetPort: 9091
+    - name: torrent-tcp
+      port: 51413
+      targetPort: 51413
+    - name: torrent-udp
+      port: 51413
+      targetPort: 51413
+      protocol: UDP
+
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: qbittorrent
+  name: transmission
   namespace: media-stack
 spec:
   entryPoints:
@@ -24,5 +31,5 @@ spec:
     - match: Host(`downloads.homelab.local`)
       kind: Rule
       services:
-        - name: qbittorrent
-          port: 8080
+        - name: transmission
+          port: 9091
