--- a/cluster/apps/media-stack/transmission/transmission-pvc.yaml
+++ b/cluster/apps/media-stack/transmission/transmission-pvc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: qbittorrent-config
+  name: transmission-config
   namespace: media-stack
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: nfs-dynamic
   resources:
     requests:
       storage: 1Gi
-  volumeName: qbittorrent-config-pv
+  storageClassName: nfs-dynamic  
+  volumeName: transmission-config-pv  
