--- a/cluster/apps/media-stack/radarr/radarr-pvc.yaml
+++ b/cluster/apps/media-stack/radarr/radarr-pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ""
+  storageClassName: nfs-dynamic
   resources:
     requests:
       storage: 1Gi
