fix: corregir typo en annotations de ArgoCD (argojroj -> argoproj)

--- a/cluster/apps/argo-apps/storageclasses-app.yaml
+++ b/cluster/apps/argo-apps/storageclasses-app.yaml
@@ -5,7 +5,7 @@ metadata:
   name: storageclasses
   namespace: argocd
   annotations:
-    argocd.argojroj.io/sync-wave: "-19"
+    argocd.argoproj.io/sync-wave: "-19"
 spec:
   project: default
   source:
