--- a/cluster/apps/argo-apps/argocd-app.yaml
+++ b/cluster/apps/argo-apps/argocd-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-ui
   namespace: argocd
   annotations:
-    argocd.argojroj.io/sync-wave: "0" 
+    argocd.argoproj.io/sync-wave: "0" 
 spec:
   project: default
   source:
