--- a/cluster/apps/media-stack/sonarr/kustomization.yaml
+++ b/cluster/apps/media-stack/sonarr/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   - sonarr-pvc.yaml
   - sonarr-deployment.yaml
   - sonarr-networking.yaml
-  #- sonarr-config-pv.yaml
+  - sonarr-config-pv.yaml
