--- a/cluster/apps/media-stack/sonarr/sonarr-pvc.yaml
+++ b/cluster/apps/media-stack/sonarr/sonarr-pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: nfs-dynamic
   resources:
     requests:
       storage: 1Gi
