--- a/cluster/apps/external-services/truenas.yaml
+++ b/cluster/apps/external-services/truenas.yaml
@@ -17,7 +17,7 @@ metadata:
   namespace: external-services
 subsets:
   - addresses:
-      - ip: "192.168.0.20"
+      - ip: "192.168.0.21"
     ports:
       - port: 80
         protocol: TCP
@@ -29,11 +29,11 @@ metadata:
   namespace: external-services
 spec:
   entryPoints:
-    - web # Solo escuchamos en HTTP
+    - web 
   routes:
   - match: Host(`truenas.homelab.local`)
     kind: Rule
     services:
     - name: truenas
       port: 80
-      passHostHeader: true # <-- Esto debería solucionar el "loading" infinito
+      passHostHeader: true 
